# SlicerVolumeClip

./: CMakeLists.txt  VolumeClipExtension_Logo.xcf
SubjectHierarchyPlugins/: CMakeLists.txt  VolumeClipSubjectHierarchyPlugin.py  __init__.py
VolumeClip/: CMakeLists.txt
VolumeClip/VolumeClipWithRoi/: CMakeLists.txt  VolumeClipWithRoi.py
VolumeClipWithModel/: CMakeLists.txt  VolumeClipWithModel.py
VolumeClipWithRoi/: VolumeClipWithRoi.py
